--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -8,8 +8,9 @@ base()
   margin: 0
   padding: 0
 
-body
-  padding: 50px
+img
+  outline: none
+  border: none
 
 .content
   width: 100%
@@ -47,8 +48,89 @@ body
 .regular.italic { font-family: 'bariol_regular_italic-webfont'; }
 .bold.italic { font-family: 'bariol_bold_italic-webfont'; }
 
+.contents
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  margin: auto
+  height: 400px
+  width: 495px
+
+.bottom
+  margin-top: 200px
+  position: relative
+
+
+.logo
+  height: 100px
+
+h1
+  font-family: 'bariol_light-webfont';
+  font-size: 50px
+
+h2
+  font-family: 'bariol_light_italic-webfont';
+  font-size: 34px
+
+h3
+  font-family: 'bariol_regular-webfont';
+  font-size: 22px
+  text-align: center
+  padding-bottom: 20px
+
+span
+  color: grey
+
+.red
+  color: red
+.green
+  color: green
+
+.column
+  float: left
+
+.column1
+  @extends .column
+  width 33.5%
+
+.column2
+  @extends .column
+
 .copy
   font-size: 16px
+
+.our
+  & > *
+    display: inline-block
+    width: 50%
+    text-align: center
+    &:first-child
+      position: relative
+      left: 15px
+    &:last-child
+      position: relative
+      right: 15px
+
+.her
+  width: 50%
+  display: inline-block
+  & > *
+    display: inline-block
+    width: 33%
+    & > *
+      float: left;
+
+.his
+  width: 50%
+  display: inline-block
+  & > *
+    display: inline-block
+    width: 33%
+    & > *
+      float: right;
+
 
 .copy.light { font-family: 'freigsanlig-webfont'; }
 .copy.book { font-family: 'freigsanboo-webfont'; }
@@ -57,3 +139,24 @@ body
 .copy.light.italic { font-family: 'freigsanligita-webfont'; }
 .copy.book.italic { font-family: 'freigsanbooita-webfont'; }
 .copy.medium.italic { font-family: 'freigsanmedita-webfont'; }
+
+
+.social-icon
+  size: 40 40
+
+.our-facebook
+  @extends .social-icon
+.our-twitter
+  @extends .social-icon
+.her-dribbble
+  @extends .social-icon
+.her-linkedin
+  @extends .social-icon
+.her-personal
+  @extends .social-icon
+.his-github
+  @extends .social-icon
+.his-linkedin
+  @extends .social-icon
+.his-personal
+  @extends .social-icon
