fix bug with margin on h1

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -69,6 +69,7 @@ img
 h1
   font-family: 'bariol_light-webfont';
   font-size: 50px
+  margin: 0
 
 h2
   font-family: 'bariol_light_italic-webfont';
