add social links

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,11 @@ block content
         h3= 'Us'
         .our
           span
-            img.our-facebook(src='svg/icon-l-facebook.svg')
+            a(href='mailto:together@wemakelovely.com')
+              img.our-email(src='svg/icon-l-mail.svg')
           span
-            img.our-twitter(src='svg/icon-l-twitter.svg')
+            a(href='https://twitter.com/wemakelovely')
+              img.our-twitter(src='svg/icon-l-twitter.svg')
     .column2
       h1= 'We make lovely.'
       h2
@@ -24,15 +26,21 @@ block content
           span.green='Him'
         .her
           span
-            img.her-dribbble(src='svg/icon-m-dribbble.svg')
+            a(href='http://dribbble.com/mars.toyship')
+              img.her-dribbble(src='svg/icon-m-dribbble.svg')
           span
-            img.her-linkedin(src='svg/icon-m-linkedin.svg')
+            a(href='http://www.linkedin.com/pub/marissa-epstein/58/5a5/791')
+              img.her-linkedin(src='svg/icon-m-linkedin.svg')
           span
-            img.her-personal(src='svg/icon-m-personal.svg')
+            a(href='http://marissaepstein.com')
+              img.her-personal(src='svg/icon-m-personal.svg')
         .his
           span
-            img.his-github(src='svg/icon-w-github.svg')
+            a(href='https://github.com/wkf')
+              img.his-github(src='svg/icon-w-github.svg')
           span
-            img.his-linkedin(src='svg/icon-w-linkedin.svg')
+            a(href='http://www.linkedin.com/pub/william-farrell/b/9a8/301')
+              img.his-linkedin(src='svg/icon-w-linkedin.svg')
           span
-            img.his-personal(src='svg/icon-w-personal.svg')
+            a(href='https://twitter.com/wkf')
+              img.his-personal(src='svg/icon-w-personal.svg')
