remove name and update layout

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -61,7 +61,7 @@ img
 .bottom
   margin-top: 200px
   position: relative
-
+  padding: 0 40px
 
 .logo
   height: 100px
@@ -74,6 +74,7 @@ h1
 h2
   font-family: 'bariol_light_italic-webfont';
   font-size: 34px
+  line-height: 100px
 
 h3
   font-family: 'bariol_regular-webfont';
@@ -103,35 +104,12 @@ span
   font-size: 16px
 
 .our
+  width: 100%
+  display: inline-block
   & > *
     display: inline-block
-    width: 50%
+    width: 16.5%
     text-align: center
-    &:first-child
-      position: relative
-      left: 15px
-    &:last-child
-      position: relative
-      right: 15px
-
-.her
-  width: 50%
-  display: inline-block
-  & > *
-    display: inline-block
-    width: 33%
-    & > *
-      float: left;
-
-.his
-  width: 50%
-  display: inline-block
-  & > *
-    display: inline-block
-    width: 33%
-    & > *
-      float: right;
-
 
 .copy.light { font-family: 'freigsanlig-webfont'; }
 .copy.book { font-family: 'freigsanboo-webfont'; }
@@ -141,12 +119,26 @@ span
 .copy.book.italic { font-family: 'freigsanbooita-webfont'; }
 .copy.medium.italic { font-family: 'freigsanmedita-webfont'; }
 
+.logo
+  height: 100px
+
+a.contact:hover .logo
+  opacity: .5
+
+a.contact:hover .our-email
+  opacity: 1
 
 .social-icon
   size: 40 40
 
 .our-email
   @extends .social-icon
+  position: absolute
+  left: 0px
+  top: 0px
+  z-index: -1
+  opacity: 0
+  padding: 30px 53px
 .our-twitter
   @extends .social-icon
 .her-dribbble
