add we make name

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ block content
         img.logo(src='svg/wml-logo.svg')
         img.our-email(src='svg/icon-l-mail.svg')
     .column2
+      h1= 'We Make'
       h2
         span.red= 'Design'
         = ' & '
